--- a/src/styles/components/locations.css
+++ b/src/styles/components/locations.css
@@ -621,6 +621,7 @@
   margin: 0 0 0.75rem 0;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2; /* Standard property for compatibility */
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -1400,6 +1401,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  line-clamp: 2; /* Standard property for compatibility */
 }
 
 /* Remove default margins */
